--- a/src/pages/receita-salva/receita-salva.html
+++ b/src/pages/receita-salva/receita-salva.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>receitaSalva</ion-title>
+    <ion-title>Receitas Salva</ion-title>
   </ion-navbar>
 
 </ion-header>
