--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="sideBar" padding>
   <h3>Easy Cooking</h3>
 
   <button ion-button color="light" (click)="irParaPerfil()">Perfil</button>
