--- a/src/pages/detalhe-receita/detalhe-receita.html
+++ b/src/pages/detalhe-receita/detalhe-receita.html
@@ -11,7 +11,7 @@
       <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
       </button>
-      <ion-title>List</ion-title>
+      <ion-title>Receita</ion-title>
     </ion-navbar>
   </ion-header>
 
@@ -19,5 +19,5 @@
 
 
 <ion-content padding>
-
+    <img src={{receitaNaTela.img}}>
 </ion-content>
