--- a/src/pages/detalhe-receita/detalhe-receita.html
+++ b/src/pages/detalhe-receita/detalhe-receita.html
@@ -19,5 +19,44 @@
 
 
 <ion-content padding>
-    <img src={{receitaNaTela.img}}>
+  <img src={{detalheReceita.img}}>
+  <h1>{{detalheReceita.produto}}</h1>
+  <h5>
+      <ion-icon name="star"  medium></ion-icon>
+      <ion-icon name="star"  medium></ion-icon>
+      <ion-icon name="star"  medium></ion-icon>
+      <ion-icon name="star"  medium></ion-icon>
+      <ion-icon name="star"  medium></ion-icon>
+      {{detalheReceita.nRate}}
+  </h5>
+  <h5>
+      <ion-icon name="timer"></ion-icon>
+      {{detalheReceita.tempo}}
+  </h5>
+  <h5>
+      <ion-icon name="people"></ion-icon>
+      {{detalheReceita.serve}}
+  </h5>
+  <h5>
+      <ion-icon name="flame"></ion-icon>
+      {{detalheReceita.calorias}}
+  </h5>
+
+  <p>{{detalheReceita.descri}}</p>
+  <h1>Ingredientes no Box</h1>
+  <img class = "ingredientes" src={{detalheReceita.ingredientes}}>
+  <button ion-button outiline color="danger">Add</button>
+  <ion-row>
+    <ion-col>
+        <ion-fab bottom right >
+            <button ion-fab>Share</button>
+            <ion-fab-list side="left">
+              <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+              <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+              <button ion-fab><ion-icon name="logo-instagram"></ion-icon></button>
+              <button ion-fab><ion-icon name="logo-whatsapp"></ion-icon></button>
+            </ion-fab-list>
+        </ion-fab>
+    </ion-col>
+  </ion-row>
 </ion-content>
