--- a/src/pages/receitas/receitas.html
+++ b/src/pages/receitas/receitas.html
@@ -20,7 +20,8 @@
 
 <ion-content padding id="content">
   <ion-card *ngFor = "let produto of dadosReceitas.receitas" id="cards">
-    <button (click)= "irParaDetalheReceita(produto)">
+    <button (click)= "irParaDet
+    alheReceita(produto)">
     <img src={{produto.img}}>
   
     <!-- <ion-item>
