--- a/src/pages/detalhe-receita/detalhe-receita.html
+++ b/src/pages/detalhe-receita/detalhe-receita.html
@@ -45,7 +45,7 @@
   <p>{{detalheReceita.descri}}</p>
   <h1>Ingredientes no Box</h1>
   <img class = "ingredientes" src={{detalheReceita.ingredientes}}>
-  <button ion-button outiline color="danger">Add</button>
+  <!-- <button ion-button outiline color="danger">Add</button> -->
   <ion-row>
     <ion-col>
         <ion-fab bottom right >
