--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -66,13 +66,13 @@
   </ion-row>
   <ion-row id="exception3">
       <br><br>
-    <div class="subcontenthome">Ingredientes bem selecionados para você só comer do melhor!</div>
+    <div class="subcontenthome2">Ingredientes bem selecionados para você só comer do melhor!</div>
   </ion-row>
 </div>
 </ion-grid>
 
   <div id="buttonposition">
-    <button ion-button> Comece a cozinhar! </button>
+    <button (click)="irParaReceita()" ion-button> Comece a cozinhar! </button>
   </div>
 </ion-content>
 
