compartilhar no Face

--- a/src/pages/detalhe-receita/detalhe-receita.html
+++ b/src/pages/detalhe-receita/detalhe-receita.html
@@ -51,7 +51,7 @@
         <ion-fab bottom right >
             <button ion-fab>Share</button>
             <ion-fab-list side="left">
-              <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+              <button ion-fab (click)="fbShare(detalheReceita)"><ion-icon name="logo-facebook"></ion-icon></button>
               <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
               <button ion-fab><ion-icon name="logo-instagram"></ion-icon></button>
               <button ion-fab><ion-icon name="logo-whatsapp"></ion-icon></button>
